--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<table border=30 bordercolor="white" cellpadding="10" cellspacing="10"  >
 		<tr>
 			<td width="300" height="150"><div align="center" style="color:#ffffff; font-weight:bold;font-size:60px;">name</div></td>
-			<td width="300" height="150"><div align="center" style="color:#ffffff; font-weight:bold;font-size:60px;">ĞíÎÄÌÏ</div></td>
+			<td width="300" height="150"><div align="center" style="color:#ffffff; font-weight:bold;font-size:60px;">è®¸æ–‡æ»”</div></td>
 		<tr>
 		<tr>
 			<td width="300" height="150"><div align="center" style="color:#ffffff; font-weight:bold;font-size:60px;">student num</div></td>
