--- a/index.html
+++ b/index.html
@@ -3,20 +3,30 @@
 	<style>
 		.alsp{ font-family:"Courier New";font-size:50px}
 	</style>
-	<div style="color:#ffffff";>
+	<div style="color:#ffffff;font-size:30px">
 		<div id="time1">
 		</div>
 		<script>            	
 			setInterval("document.getElementById('time1').innerHTML = new Date().toLocaleString();", 1000);		
 		</script>
 	</div>
+	<title>wuwentao's webpage</title>
 </head>
 <body>
 	<div class="alsp">				
 		<div align="center" style="color:#ffffff; font-weight:bold;">xuwentao's test web</div>
 	</div>
 	<body style="background-image:url(img/blackrose.jpg);background-repeat:no-repeat;background-size:100%;background-attachment: fixed;">
-	<marquee direction="left" behavior="alternate">
+	<div style="color:#ffffff; font-weight:bond; font-size:30px;right:350px;position:absolute;bottom:450px;">more about my web</div>
+	<div style="right:400px;position:absolute;bottom:400px;">
+		<a href="past.html">		
+			<div style="color:#ffffff";>1.this my begging page</div>		
+		</a>
+	</div>  
+	<div style="color:#ffffff;font-size:20px;right:623px;position:absolute;bottom:50px;">thanks for watching,good night</div>                
+		
+		
+		<marquee direction="left" behavior="alternate">
 	<table border=5 bordercolor="white" cellpadding="2" cellspacing="2">
 		<tr>
 			<td width="150" height="30"><div align="center" style="color:#ffffff; font-weight:bold;font-size:20px;">name</div></td>
@@ -27,5 +37,8 @@
 			<td width="150" height="30"><div align="center" style="color:#ffffff; font-weight:bold;font-size:20px;">201632110224</div></td>
 		<tr>
 		</marquee>
+
+
+
 </body>
 </html>
