--- a/index.html
+++ b/index.html
@@ -14,16 +14,21 @@
 </head>
 <body>
 	<div class="alsp">				
-		<div align="center" style="color:#ffffff; font-weight:bold;">xuwentao's test web</div>
+		<div align="center" style="color:white; font-weight:bold;">xuwentao's test web</div>
 	</div>
 	<body style="background-image:url(img/blackrose.jpg);background-repeat:no-repeat;background-size:100%;background-attachment: fixed;">
-	<div style="color:#ffffff; font-weight:bond; font-size:30px;right:350px;position:absolute;bottom:450px;">more about my web</div>
+	<div style="color:white; font-weight:bond; font-size:30px;right:350px;position:absolute;bottom:450px;">more about my web</div>
 	<div style="right:400px;position:absolute;bottom:400px;">
 		<a href="past.html">		
-			<div style="color:#ffffff";>1.this my begging page</div>		
+			<div style="color:white";>1.this my begging page</div>		
 		</a>
 	</div>  
-	<div style="color:#ffffff;font-size:20px;right:623px;position:absolute;bottom:50px;">thanks for watching,good night</div>                
+	<div style="left:955px;position:absolute;bottom:350px;">
+		<a href="pastone.html">		
+			<div style="color:white";>2.this my nextpage(about Mercedes AMG)</div>		
+		</a>
+	</div>  
+	<div style="color:white;font-size:20px;right:623px;position:absolute;bottom:50px;">thanks for watching,good night</div>                
 		
 		
 		<marquee direction="left" behavior="alternate">
@@ -37,7 +42,7 @@
 			<td width="150" height="30"><div align="center" style="color:#ffffff; font-weight:bold;font-size:20px;">201632110224</div></td>
 		<tr>
 		</marquee>
-
+		
 
 
 </body>
