--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </head>
 <body>
 	<div style="left:300px;position:absolute;bottom:300px;color:white;">
-	The web page <br><br>Developed by ĞíÎÄÌÏ<br><br>It takes about 10 times changes made him into what it is now
+	The web page <br><br>Developed by è®¸æ–‡æ»”<br><br>It takes about 10 times changes made him into what it is now
 	</div>
 	<div class="alsp">				
 		<div align="center" style="color:white; font-weight:bold;font-family:Courier New;font-size:50px;">xuwentao's test web</div>
