--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </head>
 <body>
 	<div style="left:300px;position:absolute;bottom:300px;color:white;">
-	The web page <br><br>Developed by è®¸æ–‡æ»”<br><br>It takes about 10 times changes made him into what it is now
+	The web page <br><br>Developed by ĞíÎÄÌÏ<br><br>It takes about 10 times changes made him into what it is now
 	</div>
 	<div class="alsp">				
 		<div align="center" style="color:white; font-weight:bold;font-family:Courier New;font-size:50px;">xuwentao's test web</div>
@@ -43,6 +43,9 @@
 	</div>
 	<div style="left:955px;position:absolute;bottom:250px;">
 		<a href= "zjnuxwt.github.io/pastthree.html">4.teach youself about html</a>
+	</div>
+	<div style="left:955px;position:absolute;bottom:200px;">
+			<a href= "zjnuxwt.github.io/index1.html">5.teach youself about html(I use a template, so it's beauty)</a>
 	</div>
 	<div style="color:white;font-size:20px;right:623px;position:absolute;bottom:50px;">thanks for watching,good night</div>                
 		
